--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               Poster Greetings
             </p>
             <a href="img/Greetings poster.pdf" download="poster-Greetings">
-             <img src="img/posterGreetings.png" alt="">
+             <img src="img/posterGreetings.PNG" alt="">
             </a>
           </div>
 
